@@ -1,5 +1,17 @@
 2014-01-28  Richard Biener  <rguenther@suse.de>
 
+	Revert
+	2014-01-28  Richard Biener  <rguenther@suse.de>
+
+	PR rtl-optimization/45364
+	PR rtl-optimization/59890
+	* var-tracking.c (local_get_addr_clear_given_value): Handle
+	already cleared slot.
+	(val_reset): Handle not allocated local_get_addr_cache.
+	(vt_find_locations): Use post-order on the inverted CFG.
+
+2014-01-28  Richard Biener  <rguenther@suse.de>
+
 	* tree-data-ref.h (ddr_is_anti_dependent, ddrs_have_anti_deps):
 	Remove.
 
